Fix alignment of filter options

--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -589,34 +589,6 @@
     font-size: 18px;
   }
 
-  .distance-select {
-    display: flex;
-    background-color: transparent;
-    border-spacing: 0px;
-    margin: 0px;
-    padding: 0px;
-    space: 0px;
-    width: auto;
-    color: #922C50;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 20px;
-  }
-  
-  .category-select {
-    display: flex;
-    background-color: transparent;
-    border-spacing: 0px;
-    margin: 0px;
-    padding: 0px;
-    space: 0px;
-    width: auto;
-    color: #922C50;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 20px;
-  }
-
   .location-filter {
     color: #922C50;
     font-weight: 600;
